# persistent

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .stylish-haskell.yaml  .travis.yml  CONTRIBUTING.md  ChangeLog.md  Dockerfile  README.md  TODO  TODO.md  WebPlug.hs  auth-example.hs  blog-redis.hs  blog.hs  cabal.project  development.md  docker-compose.yml  flake.nix  haddock.sh  idea1.hs  install-all.sh  justfile  leak.hs  package-list.sh  persistent-mega.cabal  persistent.cabal  person-example.hs  pool.cabal  posttest.hs  runtests.hs  sediment-example.hs  sources.txt  sqlite-example.hs  stack-8.10.yaml  stack-docker.yaml  stack-ghc-8.10.4.yaml  stack-ghc-8.4.4.yaml  (+11 more)
backends/postgresql/: persistent-postgresql.cabal
backends/redis/: persistent-redis.cabal
backends/sqlite/: persistent-sqlite.cabal  test1.hs
backends/sqlite/Database/: Sqlite.hs
experimental/couchDB/: persistent-couchdb.cabal
experimental/mysql/: persistent-mysql.cabal
experimental/mysql/Database/: Mysql.hs
experimental/redis/: persistent-redis.cabal  test1.hs
persistent/: ChangeLog.md  README.md  persistent-mongoDB  persistent-postgresql  persistent-template  persistent.cabal  runtests.hs
persistent-mongoDB/: ChangeLog.md  README.md  cabal.config  persistent-mongoDB.cabal
persistent-mongoDB/Database/Persist/: MongoDB.hs
persistent-mongoDB/test/: DataTypeTestMongo.hs  EmbedOrderTestMongo.hs  EmbedTestMongo.hs  EntityEmbedTestMongo.hs  HtmlTestMongo.hs  InitMongo.hs  LargeNumberTestMongo.hs  Main.hs  MaxLenTestMongo.hs  MongoInit.hs  MongoTest.hs  RawMongoHelpers.hs  RecursiveMongo.hs  RenameTestMongo.hs  SumTypeTestMongo.hs  main.hs
persistent-mongoDB/test/app/: mongoapp.hs  unit.hs
persistent-mongoDB/testsuite/tests/: splices.txt
persistent-mysql/: ChangeLog.md  LICENSE  README.md  persistent-mysql.cabal
persistent-mysql/Database/Persist/: MySQL.hs
persistent-mysql/test/: CustomConstraintTest.hs  ImplicitUuidSpec.hs  InsertDuplicateUpdate.hs  JSONTest.hs  MyInit.hs  main.hs
persistent-postgresql/: ChangeLog.md  README.md  persistent-postgresql-bench-baseline.prof  persistent-postgresql-bench-chronos.prof  persistent-postgresql.cabal  settings.yaml  test-settings.hs  test-settings.sh
persistent-postgresql/Database/Persist/: Postgresql.hs  query.sql
persistent-postgresql/benchmark/: ChronosPersistent.hs  Main.hs  UTCTimeSetup.hs
persistent-postgresql/conn-killed/: Main.hs
persistent-postgresql/exe/: Main.hs
persistent-postgresql/test/: ArrayAggTest.hs  ArrayTest.hs  AsyncExceptionsTest.hs  CustomConstraintTest.hs  EquivalentTypeTestPostgres.hs  GeographyTest.hs  GeographyType.hs  ImplicitUuidSpec.hs  JSONTest.hs  MigrationReferenceSpec.hs  PgInit.hs  PgIntervalTest.hs  QueryInProgressTest.hs  RetryableTransactionsTest.hs  Streaming.hs  UpsertWhere.hs  main.hs
persistent-postgresql/test/ArrayTest/: Instances.hs
persistent-qq/: .gitignore  ChangeLog.md  README.md  package.yaml  persistent-qq.cabal
persistent-qq/test/: CodeGenTest.hs  PersistentTestModels.hs  Spec.hs
persistent-query/: persistent-query.cabal
persistent-query/Database/Persist/: Join.hs  Query.hs
persistent-redis/: ChangeLog.md  LICENSE  README.md  persistent-redis.cabal
persistent-redis/Database/Persist/: Redis.hs
persistent-redis/tests/: basic-test.hs
persistent-sqlite/: ChangeLog.md  persistent-sqlite.cabal  test1.hs  test3.hs
persistent-sqlite/Database/: Sqlite.hs
persistent-sqlite/Database/Persist/: Sqlite.hs
persistent-sqlite/Database/Sqlite/: Internal.hs
persistent-sqlite/cbits/: config.c  fix.c
persistent-sqlite/test/: Spec.hs  SqliteInit.hs  main.hs  sanity.hs
persistent-template/: ChangeLog.md  README.md  persistent-template.cabal
persistent-template/Database/Persist/: TH.hs
persistent-template/bench/: Main.hs  Models.hs
persistent-template/compile-time-testing/: README.md  add-timings.rb
persistent-template/test/: Entities.hs  OverloadedLabelTest.hs  SharedPrimaryKeyTest.hs  SharedPrimaryKeyTestImported.hs  TemplateTestImports.hs  main.hs
persistent-test/: ChangeLog.md  CompositeTest.hs  CustomPersistField.hs  CustomPrimaryKeyReferenceTest.hs  DataTypeTest.hs  EmbedOrderTest.hs  EmbedTest.hs  EmptyEntityTest.hs  EntityEmbedTest.hs  HtmlTest.hs  Init.hs  JoinTest.hs  LargeNumberTest.hs  MaxLenTest.hs  MigrationOnlyTest.hs  MigrationTest.hs  PersistTestPetTypeJSON.hs  PersistUniqueTest.hs  PersistentTest.hs  PrimaryTest.hs  README.md  RenameTest.hs  SumTypeTest.hs  UniqueTest.hs  cbits  persistent  persistent-couchdb  persistent-mysql  persistent-query  persistent-sqlite  persistent-test.cabal  persistent-zookeeper
persistent-test/src/: CompositeTest.hs  CustomPersistField.hs  CustomPersistFieldTest.hs  CustomPrimaryKeyReferenceTest.hs  DataTypeTest.hs  DeleteCascadeTest.hs  DerivePersistTest.hs  EmbedOrderTest.hs  EmbedTest.hs  EmptyEntityTest.hs  EntityEmbedTest.hs  EquivalentTypeTest.hs  ForeignKey.hs  GeneratedColumnTestSQL.hs  HookCounts.hs  HtmlTest.hs  Init.hs  InsertDuplicateUpdate.hs  JSONTest.hs  LargeNumberTest.hs  LongIdentifierTest.hs  MaxLenTest.hs  MaybeFieldDefsTest.hs  MigrationColumnLengthTest.hs  MigrationIdempotencyTest.hs  MigrationOnlyTest.hs  MigrationTest.hs  MpsCustomPrefixTest.hs  MpsNoPrefixTest.hs  NullableGenerated.hs  PersistLiteralTestSQL.hs  PersistTestPetCollarType.hs  PersistTestPetType.hs  PersistUniqueTest.hs  PersistentTest.hs  PersistentTestModels.hs  PersistentTestModelsImports.hs  PrimaryTest.hs  RawSqlTest.hs  ReadWriteTest.hs  (+9 more)
persistent-test/test/: from-cabal  main.hs
persistent-zookeeper/: ChangeLog.md  LICENSE  persistent-zookeeper.cabal
persistent-zookeeper/Database/Persist/: Zookeeper.hs
persistent-zookeeper/tests/: basic-test.hs
persistent/Database/: Persist.hs
persistent/Database/Persist/: Base.hs  Class.hs  Compatible.hs  DerivePersist.hs  EntityDef.hs  FieldDef.hs  GenericSql.hs  Sql.hs  (+11 more)
persistent/bench/: Main.hs  Models.hs  models-slowly
persistent/test/: TemplateTestImports.hs  from-cabal  main.hs
pool/: pool.cabal
pool-conduit/: pool-conduit.cabal
pool/Data/: Pool.hs
(+240 files in other folders)
