name:            persistent-mega
version:         0.6.4
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Type-safe, non-relational, multi-backend persistence.
description:     This library provides just the general interface and helper functions. You must use a specific backend in order to make this useful.
category:        Database, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/persistent

library
    hs-source-dirs:
                    persistent
                    persistent-sqlite
                    persistent-postgresql
                    persistent-template
                    persistent-mongoDB

    build-depends:   base                     >= 4       && < 5

                   -- persistent-mongodb
                   , mongoDB            >= 1.1     && < 1.2
                   , bson               >= 0.1.6
                   , network            >= 2.2.1.7 && < 3
                   , compact-string-fix >= 0.3.1   && < 0.4
                   , cereal             >= 0.3.0.0
                   , path-pieces        >= 0.0     && < 0.1

                   -- persistent-template
                   , template-haskell
                   -- persistent-postgresql
                   , HDBC                  >= 2.2.6    && < 2.4
                   , HDBC-postgresql       >= 2.2.3.1  && < 2.4

                   -- persistent-sqlite
                   , neither                  >= 0.3       && < 0.4
                   , bytestring               >= 0.9.1     && < 0.10

                   -- persistent
                   , transformers             >= 0.2.1   && < 0.3
                   , time                     >= 1.1.4   && < 1.3
                   , text                     >= 0.8     && < 0.12
                   , containers               >= 0.2     && < 0.5
                   , enumerator               >= 0.4.9   && < 0.5
                   , monad-control            >= 0.2     && < 0.3
                   , pool                     >= 0.1     && < 0.2
                   , blaze-html               >= 0.4     && < 0.5
                   , path-pieces              >= 0.0     && < 0.1
                   , mtl                      >= 2.0     && < 2.1
                   , data-object              >= 0.3.1.7 && < 0.4

    exposed-modules:
                     -- persistent-mongoDB
                     Database.Persist.MongoDB
                     -- persistent-template
                     Database.Persist.TH
                     -- persistent-postgresql
                     Database.Persist.Postgresql
                     -- persistent-sqlite
                     Database.Sqlite
                     Database.Persist.Sqlite

                     -- persistent
                     Database.Persist
                     Database.Persist.Base
                     Database.Persist.Quasi
                     Database.Persist.GenericSql
                     Database.Persist.GenericSql.Internal
                     Database.Persist.GenericSql.Raw
                     Database.Persist.TH.Library
                     Database.Persist.Util
                     Database.Persist.Join
                     Database.Persist.Join.Sql

    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/persistent.git
