name:            persistent
version:         0.2.2
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Type-safe, non-relational, multi-backend persistence.
description:     This library provides just the general interface and helper functions. You must use a specific backend in order to make this useful.
category:        Database
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://docs.yesodweb.com/persistent/

library
    build-depends:   base >= 4 && < 5,
                     template-haskell >= 2.4 && < 2.5,
                     bytestring >= 0.9.1 && < 0.10,
                     MonadCatchIO-transformers >= 0.2.2 && < 0.3,
                     transformers >= 0.2.1 && < 0.3,
                     time >= 1.1.4 && < 1.3,
                     utf8-string >= 0.3.4 && < 0.4,
                     text >= 0.7.1 && < 0.9,
                     hamlet >= 0.5 && < 0.6,
                     web-routes-quasi >= 0.6.0 && < 0.7,
                     containers >= 0.2 && < 0.4,
                     parsec >= 2.1 && < 4,
                     enumerator >= 0.4 && < 0.5,
                     stm >= 2.1 && < 2.2
    exposed-modules: Database.Persist
                     Database.Persist.Base
                     Database.Persist.TH
                     Database.Persist.Quasi
                     Database.Persist.GenericSql
                     Database.Persist.GenericSql.Internal
                     Database.Persist.GenericSql.Raw
                     Database.Persist.Pool
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/persistent.git
