name:            persistent-mongoDB
version:         1.4.1
license:         MIT
license-file:    LICENSE
author:          Greg Weber <greg@gregweber.info>
maintainer:      Greg Weber <greg@gregweber.info>
synopsis:        Backend for the persistent library using mongoDB.
category:        Database
stability:       Experimental
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/book/persistent
bug-reports:     https://github.com/yesodweb/persistent/issues
description:     MongoDB backend for the persistent library.

Flag high_precision_date
   Description: for MongoDB use a time storage with nano second precision.
   Default: False

library
    build-depends:   base               >= 4 && < 5
                   , persistent         >= 1.3     && < 1.4
                   , text               >= 0.8
                   , transformers       >= 0.2.1
                   , containers         >= 0.2
                   , bytestring         >= 0.9
                   , conduit            >= 0.5.3
                   , resourcet          >= 0.3
                   , mongoDB            >= 1.4.1   && < 1.6
                   , bson               >= 0.2     && < 0.3
                   , network            >= 2.2.1.7
                   , cereal             >= 0.3.0.0
                   , path-pieces        >= 0.1
                   , monad-control      >= 0.3
                   , aeson              >= 0.5
                   , attoparsec
                   , pool-conduit       >= 0.1
                   , time

    exposed-modules: Database.Persist.MongoDB
    ghc-options:     -Wall

   if flag(high_precision_date)
     cpp-options: -DHIGH_PRECISION_DATE

source-repository head
  type:     git
  location: git://github.com/yesodweb/persistent.git
