name:            persistent-mongoDB
version:         2.8.0
license:         MIT
license-file:    LICENSE
author:          Greg Weber <greg@gregweber.info>
maintainer:      Greg Weber <greg@gregweber.info>
synopsis:        Backend for the persistent library using mongoDB.
category:        Database
stability:       Experimental
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/persistent
bug-reports:     https://github.com/yesodweb/persistent/issues
description:     MongoDB backend for the persistent library.
extra-source-files: ChangeLog.md

Flag high_precision_date
   Description: for MongoDB use a time storage with nano second precision.
   Default: False

library
    build-depends:   base               >= 4.8 && < 5
                   , persistent         >= 2.8   && < 3
                   , text               >= 0.8
                   , transformers       >= 0.2.1
                   , containers         >= 0.2
                   , bytestring         >= 0.9
                   , conduit            >= 0.5.3
                   , resourcet          >= 0.3
                   , mongoDB            >= 2.0.3   && (< 2.1 || >= 2.1.1)
                   , bson               >= 0.3.1   && < 0.4
                   , network            >= 2.2.1.7
                   , cereal             >= 0.3.0.0
                   , path-pieces        >= 0.1
                   , http-api-data      >= 0.2       && < 0.5
                   , aeson              >= 0.6.2
                   , attoparsec
                   , time
                   , bytestring
                   , resource-pool      < 0.3
                   , unliftio-core

    exposed-modules: Database.Persist.MongoDB
    ghc-options:     -Wall

   if flag(high_precision_date)
     cpp-options: -DHIGH_PRECISION_DATE

source-repository head
  type:     git
  location: git://github.com/yesodweb/persistent.git
