name:            persistent-mongoDB
version:         2.13.1.0
license:         MIT
license-file:    LICENSE
author:          Greg Weber <greg@gregweber.info>
maintainer:      Andres Schmois <andres@itpro.tv>
synopsis:        Backend for the persistent library using mongoDB.
category:        Database
stability:       Experimental
cabal-version:   >= 1.10
build-type:      Simple
homepage:        http://www.yesodweb.com/book/persistent
bug-reports:     https://github.com/yesodweb/persistent/issues
description:     MongoDB backend for the persistent library.
extra-source-files: ChangeLog.md

Flag high_precision_date
   Description: for MongoDB use a time storage with nano second precision.
   Default: False

library
    build-depends:   base               >= 4.8 && < 5
                   , persistent         >= 2.12   && < 3
                   , aeson              >= 1.0
                   , bson               >= 0.3.2   && < 0.5
                   , bytestring
                   , cereal             >= 0.5
                   , conduit            >= 1.2
                   , http-api-data      >= 0.3.7     && < 0.7
                   , mongoDB            >= 2.7.1.2   && < 2.8
                   , network            >= 2.6
                   , path-pieces        >= 0.2
                   , resource-pool      >= 0.2       && < 0.5
                   , resourcet          >= 1.1
                   , text               >= 1.2
                   , time
                   , transformers       >= 0.5
                   , unliftio-core

    exposed-modules: Database.Persist.MongoDB
    ghc-options:     -Wall
    default-language: Haskell2010

   if flag(high_precision_date)
     cpp-options: -DHIGH_PRECISION_DATE

test-suite test
    type:            exitcode-stdio-1.0
    main-is:         main.hs
    hs-source-dirs:  test
    other-modules:   MongoInit
                     EmbedTestMongo
                     EntityEmbedTestMongo
                     RawMongoHelpers
    ghc-options:     -Wall

    build-depends:   base >= 4.6 && < 5
                   , persistent
                   , persistent-mongoDB
                   , persistent-qq
                   , persistent-test
                   , blaze-html
                   , bytestring
                   , containers
                   , hspec           >= 2.4.0
                   , HUnit
                   , mongoDB
                   , process
                   , QuickCheck
                   , template-haskell
                   , text
                   , time
                   , transformers
                   , unliftio-core
    default-language: Haskell2010

source-repository head
  type:     git
  location: git://github.com/yesodweb/persistent.git
