name:            persistent-mysql
version:         2.6
license:         MIT
license-file:    LICENSE
author:          Felipe Lessa <felipe.lessa@gmail.com>, Michael Snoyman
maintainer:      Felipe Lessa <felipe.lessa@gmail.com>
synopsis:        Backend for the persistent library using MySQL database server.
category:        Database, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/book/persistent
bug-reports:     https://github.com/yesodweb/persistent/issues
description:
    This package contains a backend for persistent using the
    MySQL database server.  Internally it uses the @mysql-simple@
    and @mysql@ packages in order to access the database.
    .
    This package supports only MySQL 5.1 and above.  However, it
    has been tested only on MySQL 5.5.
    Only the InnoDB storage engine is officially supported.
    .
    Known problems:
    .
    * This package does not support statements inside other
      statements.
extra-source-files: ChangeLog.md

library
    build-depends:   base                  >= 4.6        && < 5
                   , transformers          >= 0.2.1
                   , mysql-simple          >= 0.2.2.3  && < 0.3
                   , mysql                 >= 0.1.1.3  && < 0.2
                   , blaze-builder
                   , persistent            >= 2.6      && < 3
                   , containers            >= 0.2
                   , bytestring            >= 0.9
                   , text                  >= 0.11.0.6
                   , monad-control         >= 0.2
                   , aeson                 >= 0.6.2
                   , conduit               >= 0.5.3
                   , resourcet             >= 0.4.10
                   , monad-logger
                   , resource-pool
    exposed-modules: Database.Persist.MySQL
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/persistent.git
