name:            persistent-postgresql
version:         2.10.0
license:         MIT
license-file:    LICENSE
author:          Felipe Lessa, Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Backend for the persistent library using postgresql.
description:     Based on the postgresql-simple package
category:        Database, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/persistent
bug-reports:     https://github.com/yesodweb/persistent/issues
extra-source-files: ChangeLog.md

library
    build-depends:   base                  >= 4.8        && < 5
                   , transformers          >= 0.2.1
                   , postgresql-simple     >= 0.4.0    && < 0.7
                   , postgresql-libpq      >= 0.6.1    && < 0.10
                   , persistent            >= 2.9      && < 3
                   , containers            >= 0.2
                   , bytestring            >= 0.9
                   , text                  >= 0.7
                   , unliftio-core
                   , blaze-builder
                   , time                  >= 1.1
                   , aeson                 >= 0.6.2
                   , conduit               >= 1.2.8
                   , resourcet             >= 1.1
                   , monad-logger          >= 0.3.4
                   , resource-pool
    exposed-modules: Database.Persist.Postgresql
                   , Database.Persist.Postgresql.JSON
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/persistent.git

test-suite test
    type:            exitcode-stdio-1.0
    main-is:         main.hs
    hs-source-dirs:  test
    other-modules:   PgInit
                     ArrayAggTest
                     JSONTest
                     EquivalentTypeTestPostgres
    ghc-options:     -Wall

    build-depends:   base >= 4.6 && < 5
                   , persistent-postgresql
                   , persistent-template
                   , hspec-expectations
                   , vector
                   , HUnit
                   , persistent-test
                   , persistent-qq
                   , template-haskell
                   , process
                   , unliftio-core
                   , aeson
                   , hspec >= 1.3
                   , text
                   , persistent
                   , bytestring
                   , QuickCheck
                   , transformers
                   , mtl
                   , containers
                   , blaze-html
                   , random >= 1.0.1
                   , fast-logger
                   , resourcet
                   , time
                   , monad-logger
                   , quickcheck-instances
                   , unordered-containers

