name:            persistent-query
version:         0.7.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        non-relational multi-backend query interface to persistent
description:     A general query interface for persistent. You must use a specific backend (sqlite, postgresqsl, MongoDB) in order to make this useful.
category:        Database, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/persistent

library
    build-depends:   base                     >= 4       && < 5
                   , containers               >= 0.2     && < 0.5
                   , enumerator               >= 0.4.9   && < 0.5
                   , transformers             >= 0.2.1   && < 0.3
                   , persistent               >= 0.7     && < 0.8
                   , monad-control            >= 0.2     && < 0.3
                   , text                     >= 0.8     && < 1

    exposed-modules:
                     Database.Persist.Query
                     Database.Persist.GenericSql.ConvertFilters
                     Database.Persist.GenericSql.Query
                     Database.Persist.Join
                     Database.Persist.Join.Sql

    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/persistent.git
