name:            persistent-redis
version:         0.3.1
license:         BSD3
license-file:    LICENSE
author:          Pavel Ryzhov <paul@paulrz.cz>
synopsis:        Backend for persistent library using Redis.
description:     Based on the Redis package.
category:        Database
stability:       Experimental
cabal-version:   >= 1.8
maintainer:      Pavel Ryzhov <paul@paulrz.cz>
build-type:      Simple
bug-reports:     https://github.com/yesodweb/persistent/issues

source-repository head
        type:           git
        location:       https://github.com/yesodweb/persistent.git

library
    build-depends:   base                  >= 4        && < 5
                   , hedis                 >= 0.6.0    && < 0.7.0
                   , bytestring            >= 0.10.0.0 && < 0.11.0.0
                   , persistent            >= 2.1      && < 2.2
                   , text                  >= 1.2.0.0
                   , aeson                 >= 0.8
                   , time                  >= 1.4      && < 1.5
                   , attoparsec            >= 0.12.0.0
                   , mtl                   >= 2.2.0    && < 2.3
                   , transformers          >= 0.4.0.0  && < 0.5.0.0
                   , monad-control         >= 0.3.2.0  && < 0.4
                   , utf8-string           >= 0.3.7    && < 0.4.0
                   , binary                >= 0.7      && < 0.8
                   , scientific            >= 0.3.1    && < 0.4
                   , path-pieces           >= 0.1

    exposed-modules: Database.Persist.Redis

    other-modules:   Database.Persist.Redis.Config
                     Database.Persist.Redis.Internal
                     Database.Persist.Redis.Store
                     Database.Persist.Redis.Parser
                     Database.Persist.Redis.Update
                     Database.Persist.Redis.Exception

    ghc-options:     -Wall

test-suite  basic
    type: exitcode-stdio-1.0
    main-is: tests/basic-test.hs
    build-depends:   base                  >= 4        && < 5
                   , hedis                 >= 0.6.0    && < 0.7.0
                   , persistent            >= 2.1      && < 2.2
                   , persistent-template   >= 2.1      && < 2.2
                   , mtl                   >= 2.2.0    && < 2.3
                   , transformers          >= 0.4.0.0  && < 0.5
                   , utf8-string           >= 0.3.7    && < 0.4.0
                   , bytestring            >= 0.10.0.0 && < 0.11.0.0
                   , text                  >= 1.2.0.0
                   , aeson                 >= 0.8
                   , binary                >= 0.7      && < 0.8
                   , time                  >= 1.4      && < 1.5
                   , attoparsec            >= 0.12.0.0
                   , template-haskell
                   , monad-control         >= 0.3.2.0  && < 0.4
                   , utf8-string           >= 0.3.7    && < 0.4.0
                   , path-pieces           >= 0.1
                   , scientific
                   , persistent-redis
